--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -22,6 +22,7 @@
 
     display: grid;
     grid-template-columns: 2fr 1fr;
+
     gap: 2rem;
 }
 .header nav {
@@ -33,8 +34,7 @@
 }
 
 .doc-name {
-    grid-row: 1 / 3;
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     text-align: center; 
     color: var(--dark-white);
 }
@@ -64,7 +64,7 @@
 /*General tags*/
 main {
     display: grid;
-    background: lightblue;
+    background-image: url("/IMG/body_background.jpg");
 }
 h1 {
     font-size: 5rem;
@@ -120,9 +120,10 @@ h3 {
         grid-template-columns: 55% 45%;
     }
 }
-*/
+
 @media (min-width: 40em) {
     .header {
         grid-template-columns: 55% 45%;
     }
 }
+*/
