--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -12,11 +12,8 @@
     padding: 0;
 }
 
-/*Classes*/
+/* Header */
 .header {
-    /* Add background-image: ; for background image */
-    /* background-repeat: norepeat */
-    /* background-position: maybe delete this */
     background-color: var(--dark-drab);
     background-image: linear-gradient(to right, var(--light-drab), var(--dark-drab));
 
@@ -32,24 +29,57 @@
 .header nav:hover {
     opacity: 0.5;
 }
-
 .doc-name {
     grid-column: 1 / 2;
     text-align: center; 
     color: var(--dark-white);
 }
-
-/*ID(s)*/
+#box-id {
+    margin-left: 2rem;
+}
 #page-subject-img{
-    grid-row: 2/ 3;
-    grid-column: 2/ 3;
+    grid-column: 2 / 2;
     float: center;
     width: 60%;
 }
 
-#box-id {
-    margin-left: 2rem;
+/* Resume */
+.resume {
+    display: grid;
+    /* background-image: linear-gradient(to right, var(--light-drab), var(--dark-white)); */
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 10% 90%;
+
+    gap: 1rem;
 }
+#resume-title {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+}
+.body-item-1 {
+    grid-row: 2 / 2;
+    grid-column: 1 / 2;
+}
+.body-item-2 {
+    grid-row: 2 / 2;
+    grid-column: 2 / 2;
+}
+.resume ul {
+    margin-left: 3rem;
+}
+
+/* Hobbies */
+.hobbies {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.hobbies-item-1 {
+    grid-column: 1 / 2;
+}
+.hobbies-item-2 {
+    grid-column: 2 / 2;
+}
+/*ID(s)*/
 
 #alab-p {
     opacity: 0;
@@ -62,10 +92,10 @@
 
 
 /*General tags*/
-main {
-    display: grid;
-    background-image: url("/IMG/body_background.jpg");
+body {
+    background-image: linear-gradient(to right, var(--light-drab), var(--dark-white));
 }
+
 h1 {
     font-size: 5rem;
     font-weight: bold;
@@ -84,7 +114,7 @@ h3 {
     font-weight: bold;
 
     text-align: left;
-    color: rgb(155, 155, 155);
+    color: var(--dark-white);
     text-decoration: underline;
 }
 
