--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -25,6 +25,8 @@
 .header nav {
     opacity: 1;
     transition: opacity 200ms;
+
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .header nav:hover {
     opacity: 0.5;
@@ -45,58 +47,75 @@
 
 /* Resume */
 .resume {
+    background-image: linear-gradient(to right, var(--light-drab), var(--dark-white));
+
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 10% 90%;
-
+    grid-template-rows: 1fr 4fr 2fr;
     gap: 1rem;
 }
 #resume-title {
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
     grid-column: 1 / 2;
 }
 .body-item-1 {
-    grid-row: 2 / 2;
+    grid-row: 2 / 3;
     grid-column: 1 / 2;
 }
 .body-item-2 {
-    grid-row: 2 / 2;
+    grid-row: 2 / 3;
     grid-column: 2 / 2;
+}
+.body-item-3 {
+    grid-row: 3 / 3;
+    grid-column: 1 / 2;
 }
 .resume ul {
     margin-left: 3rem;
 }
+#arclab-img {
+    height: 100%;
+    width: 100%;
+}
 
 /* Hobbies */
 .hobbies {
+    background-image: linear-gradient(to right, var(--dark-white), var(--light-drab));
+
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
+
+    gap: 1rem;
+}
+#hobbies-title {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
 }
 .hobbies-item-1 {
+    grid-row: 2 / 2;
     grid-column: 1 / 2;
 }
 .hobbies-item-2 {
+    grid-row: 2 / 2;
     grid-column: 2 / 2;
+}
+#music-1 {
+    height: 30dvh;
+    width: 30dvw;
 }
 /*ID(s)*/
 
-#alab-p {
-    opacity: 0;
-    transition: opacity 200ms;
-}
-
-#alab-p:hover {
-    opacity: 1;
-}
 
 
 /*General tags*/
 body {
-    background-image: linear-gradient(to right, var(--light-drab), var(--dark-white));
+    background-image: linear-gradient(to right, red, var(--dark-white));
+
 }
 
 h1 {
-    font-size: 5rem;
+    font-size: 10dvh;
     font-weight: bold;
 }
 
@@ -105,7 +124,8 @@ h2 {
     font-weight: bold;
 
     text-align: left;
-    color: var(--dark-drab)
+    color: var(--dark-drab);
+    margin-left: 2dvw;
 }
 
 h3 {
@@ -115,44 +135,110 @@ h3 {
     text-align: left;
     color: var(--dark-white);
     text-decoration: underline;
+    margin-left: 2dvw;
 }
 
 /* TODO: Include more media to account for different resolutions*/
-/*
-@media only screen and (min-width: 1025px) and (max-width: 1400px) {
+
+/* Phone resolution implementation */
+@media only screen and (max-width: 1000px) {
     .header {
-        grid-template-rows: 80% 20%;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+    .doc-name {
+        grid-row: 1 / 2;
+        grid-column: 1 / 1;
+        text-align: center; 
+        color: var(--dark-white);
+    }
+    #page-subject-img{
+        grid-row: 2 / 2;
+        grid-column: 1 / 1;
+        margin-right: 11dvh;
+        margin-left: 11dvh;
+        float: right;
+        width: 60%;
+    }
+
+    .resume {
+        background-image: linear-gradient(to right, var(--light-drab), var(--dark-white));
+    
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 4fr 2fr 1fr;
+        gap: 1rem;
+    }
+    #resume-title {
+        grid-row: 1 / 4;
+        grid-column: 1 / 1;
+    }
+    #box-id {
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    .body-item-1 {
+        grid-row: 2 / 4;
+        grid-column: 1 / 1;
+    }
+    .body-item-2 {
+        grid-row: 3 / 4;
+        grid-column: 1 / 1;
+    }
+    .body-item-3 {
+        grid-row: 4 / 4;
+        grid-column: 1 / 1;
+    }
+    #arclab-img {
+        height: 50%;
+        width: 50%;
+        margin-left: 12dvh;
+        margin-right: 12dvh;
+    }
+
+    .hobbies {
+        grid-template-rows: 1fr 4fr 3fr;
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+    #hobbies-title {
+        grid-row: 1 / 3;
+        grid-column: 1 / 1;
+    }
+    .hobbies-item-1 {
+        grid-row: 2 / 3;
+        grid-column: 1 / 1;
+    }
+    .hobbies-item-2 {
+        grid-row: 3 / 3;
+        grid-column: 1 / 1;
+    }
+    #music-1 {
+        height: 60dvh;
+        width: 60dvw;
+        margin-left: 10dvh;
+        margin-right: 15dvh;
     }
 }
 
-@media only screen and (min-width: 481px) and (max-width: 1024px){
+/* Tablet resolution implementation */
+@media only screen and (max-width: 1025px) {
     .header {
-        grid-template-columns: 55% 45%;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
     }
-}
-
-@media only screen and (min-width: 360px) and (max-width: 480px) {
-    .header {
-        grid-template-rows: 20% 80%;
+    .doc-name {
+        grid-row: 1 / 2;
+        grid-column: 1 / 1;
+        text-align: center; 
+        color: var(--dark-white);
     }
-}
-
-
-@media (min-width: 40em) {
-    .header {
-        grid-template-columns: 55% 45%;
+    #page-subject-img{
+        grid-row: 2 / 2;
+        grid-column: 1 / 1;
+        float: right;
+        width: 60%;
     }
-}
 
-@media (min-width: 40em) {
-    .header {
-        grid-template-columns: 55% 45%;
-    }
+    
 }
-
-@media (min-width: 40em) {
-    .header {
-        grid-template-columns: 55% 45%;
-    }
-}
-*/
