--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -5,6 +5,7 @@
     --light-drab: rgb(120, 176, 22);
     --dark-drab: rgb(64, 88, 24);
     --dark-white: rgb(240, 240, 240);
+    --req-red: rgb(250, 200, 200);
 }
 
 * {
@@ -106,12 +107,41 @@
 }
 /*ID(s)*/
 
+/* Survey */
+.survey {
+    background-image: linear-gradient(to right, var(--light-drab), var(--dark-white));
+
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+
+    gap: 1rem;
+}
+.survey label {
+    /* change to grid */
+    grid-row: 2;
+    display: block;
+    margin-top: 1em;
+    margin-left: 2em;
+}
+.survey input, textarea {
+    margin-left: 2em;
+}
+.req {
+    color: red;
+}
+.survey input:required:valid, textarea:required:valid {
+    background-color: var(--dark-white);
+}
+.survey input:invalid {
+    background-color: var(--req-red);
+}
+
 
 
 /*General tags*/
-body {
-    /* background-image: linear-gradient(to right, red, var(--dark-white)); */
-}
+/* body {
+    /* background-image: linear-gradient(to right, red, var(--dark-white)); 
+} */
 
 h1 {
     font-size: 10dvh;
